--- a/web/_layouts/default.html
+++ b/web/_layouts/default.html
@@ -7,7 +7,7 @@
 <title>Geocache Lookup</title>
 
 <!-- Bootstrap -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -32,11 +32,11 @@
 </nav>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
+<script src="vendor/jquery/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 {% for script in page.scripts %}
-<script src="js/{{ script }}" type="text/javascript"></script>
+<script src="{{ script }}" type="text/javascript"></script>
 {% endfor %}
 </body>
 </html>
