ContainerTypeName in feed content added

--- a/feed/views/feed.jade
+++ b/feed/views/feed.jade
@@ -13,3 +13,4 @@ feed(xmlns='http://www.w3.org/2005/Atom')
             link(rel='alternate' type='text/html' href=geocache.Url)
             published= geocache.UTCPlaceDate
             updated= geocache.UTCPlaceDate
+            content= geocache.ContainerType.ContainerTypeName
