Add more feed content

--- a/feed/views/feed.jade
+++ b/feed/views/feed.jade
@@ -1,3 +1,7 @@
+mixin content(geocache)
+    h1= geocache.Name
+    p Size #{geocache.ContainerType.ContainerTypeName}
+
 doctype xml
 feed(xmlns='http://www.w3.org/2005/Atom')
     id= self
@@ -13,4 +17,5 @@ feed(xmlns='http://www.w3.org/2005/Atom')
             link(rel='alternate' type='text/html' href=geocache.Url)
             published= geocache.UTCPlaceDate
             updated= geocache.UTCPlaceDate
-            content= geocache.ContainerType.ContainerTypeName
+            content(type='xhtml')
+                +content(geocache)
