feed content design modified

--- a/feed/views/feed.jade
+++ b/feed/views/feed.jade
@@ -1,9 +1,8 @@
 mixin content(geocache)
     h1= geocache.Name
-    p Type: #{geocache.CacheType.GeocacheTypeName}
-    p Size: #{geocache.ContainerType.ContainerTypeName}
-    p Difficulty: #{geocache.Difficulty}
-    p Terrain: #{geocache.Terrain}
+    hr
+    p Type: #{geocache.CacheType.GeocacheTypeName} Size: #{geocache.ContainerType.ContainerTypeName}
+    p Difficulty: #{geocache.Difficulty} Terrain: #{geocache.Terrain}
 
 doctype xml
 feed(xmlns='http://www.w3.org/2005/Atom')
