--- a/feed/views/feed.jade
+++ b/feed/views/feed.jade
@@ -1,8 +1,5 @@
 mixin content(geocache)
-    h1= geocache.Name
-    hr
-    p Type: #{geocache.CacheType.GeocacheTypeName} Size: #{geocache.ContainerType.ContainerTypeName}
-    p Difficulty: #{geocache.Difficulty} Terrain: #{geocache.Terrain}
+    h1= geocache.Name / geocache.CacheType.GeocacheTypeName / geocache.ContainerType.ContainerTypeName / geocache.Difficulty / geocache.Terrain
 
 doctype xml
 feed(xmlns='http://www.w3.org/2005/Atom')
