--- a/feed/views/feed.jade
+++ b/feed/views/feed.jade
@@ -1,5 +1,5 @@
 mixin content(geocache)
-    h4 #{geocache.CacheType.GeocacheTypeName} / #{geocache.ContainerType.ContainerTypeName} / D: #{geocache.Difficulty} / T: #{geocache.Terrain}
+    h4 #{geocache.CacheType.GeocacheTypeName} / #{geocache.ContainerType.ContainerTypeName} / D: #{geocache.Difficulty} / T: #{geocache.Terrain} / Lat: #{geocache.Latitude}
 
 doctype xml
 feed(xmlns='http://www.w3.org/2005/Atom')
