Experimental: Optionally display distance to home coordinates
example usage: /feed?homeLat=10&homeLon=20

--- a/feed/views/feed.jade
+++ b/feed/views/feed.jade
@@ -1,5 +1,7 @@
 mixin content(geocache)
     h4 #{geocache.CacheType.GeocacheTypeName} / #{geocache.ContainerType.ContainerTypeName} / D: #{geocache.Difficulty} / T: #{geocache.Terrain} / Coord: #{geocache.Coordinates}
+    if typeof geocache.Distance != 'undefined'
+        p Distance: #{Math.round(geocache.Distance / 1000)} km
 
 doctype xml
 feed(xmlns='http://www.w3.org/2005/Atom')
