--- a/web2/css/map.css
+++ b/web2/css/map.css
@@ -6,3 +6,13 @@
     width: 100%;
     height: 100%;
 }
+
+.map-container .sidebar {
+    background: #fff;
+}
+
+.map-container .sidebar .form {
+    padding: 0.5em;
+}
+
+
