--- a/web2/css/map.css
+++ b/web2/css/map.css
@@ -1,14 +1,24 @@
 .map-container {
     height: 100%;
+    display: flex;
 }
 
 #map {
     width: 100%;
     height: 100%;
+    flex-grow: 1;
 }
 
 .map-container .sidebar {
     background: #fff;
+    position: relative;
+    width: 100px;
+    visibility: visible;
+}
+
+.map-container .ui.right.sidebar {
+  transform: initial;
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.15);
 }
 
 .map-container .sidebar .form {
