--- a/web/css/log.css
+++ b/web/css/log.css
@@ -1,8 +1,47 @@
 .log-generator {
-    width: 700px;
+    width: 900px;
     margin: 5em auto;
 }
 
-.result {
+.log-generator .result {
     margin-top: 3em;
+}
+
+.log-generator .results {
+    margin-top: 3em;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.log-generator .results #map {
+    width: 300px;
+    height: 300px;
+    border: 1px solid rgba(0,0,0,.1);
+}
+
+.log-generator .results .map {
+    display: none;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.log-generator .results .map.withResults {
+    display: block;
+}
+
+.log-generator .results .list {
+    flex-grow: 1;
+}
+
+.log-generator .results .list .item p {
+    margin: 0;
+}
+
+.log-generator .results .list .item .actions {
+    display: none;
+}
+
+.log-generator .results .list .item:hover .actions {
+    //display: inherit;
 }
