Pan to selected log entry on click instead of hover

--- a/web/css/log.css
+++ b/web/css/log.css
@@ -32,6 +32,11 @@
 
 .log-generator .results .list {
     flex-grow: 1;
+    margin-right: 2em;
+}
+
+.log-generator .results > .list .item:hover {
+    background-color: #f5f5f5;
 }
 
 .log-generator .results .list .item p {
